--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     {% for fable in site.fables %}
       <li>
         <a href="{{ fable.url | prepend: site.baseurl }}">{{ fable.title }}</a>
-        {% if fable.moral %} <small>{{ fable.moral }}</small>{% endif %}
+        {% if fable.moral %}<br><small>{{ fable.moral }}</small>{% endif %}
       </li>
     {% endfor %}
   </ul>
